--- a/string/css/style.css
+++ b/string/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .UpperLower {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: 500px;
     height: 500px;
     margin: 0 auto;
@@ -15,6 +15,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 0 10px;
 }
 
 h2 {
